--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+# Directories
+/.vagrant
+/.vscode
+/.idea
+/.intellij
+/build
+/ignore
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -17,5 +22,21 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace file
-go.work
+# Editor swap files
+*.swp
+*.swo
+*.swn
+
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.o
+*.a
+*.so
+*.exe
+*.prof
+*.pyc
+
+# Misc
+.DS_Store
+coverage.out
+docker.env
+go_env.properties
