--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -27,7 +27,9 @@ jobs:
         uses: docker/setup-qemu-action@v2
       -
         name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
+        with:
+            go-version: 1.20
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v2
